--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.18.0",
     "@prisma/extension-accelerate": "^2.0.2",
+    "@react-google-maps/api": "^2.20.8",
     "@supabase/supabase-js": "^2.84.0",
     "@types/react-slick": "^0.23.13",
     "bcryptjs": "^3.0.3",
