--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint",
-    "seed": "dotenv -e .env.local -- ts-node prisma/seed.ts",
-    "postinstall": "prisma generate"
+    "seed": "dotenv -e .env.local -- ts-node prisma/seed.ts"
   },
   "prisma": {
     "seed": "dotenv -e .env.local -- ts-node prisma/seed.ts"
